[package]
name = "namu2csv"
version = "0.1.0"
authors = ["SkyLightQP <combbm@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
unhtml = "0.7.5"
unhtml_derive = "0.7.5"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"